{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 44,
  "lineage": "6138aa3c-5b8a-389e-1938-1f881074cfe6",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "rg1-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/publicIPAddresses/publicip1-terraform",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.51.171",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "publicip1-terraform",
            "resource_group_name": "rg1-terraform",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "rg1-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkInterfaces/rg1-nic",
            "internal_domain_name_suffix": "zxb3bhvlp2mevo0ahvfzngtf5b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/publicIPAddresses/publicip1-terraform",
                "subnet_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2D-75-16",
            "name": "rg1-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg1-terraform",
            "tags": {
              "environment": "Terraform Demo"
            },
            "virtual_machine_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Compute/virtualMachines/rg1-vm1"
          },
          "dependencies": [
            "azurerm_public_ip.vnet1-publicip1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.vnet1-subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg1-terraform",
            "location": "eastus",
            "name": "nsg1-terraform",
            "resource_group_name": "rg1-terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsg1_rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg1_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg1-terraform/securityRules/nsg1_rule",
            "name": "nsg1_rule",
            "network_security_group_name": "nsg1-terraform",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg1-terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vnet1-publicip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/publicIPAddresses/publicip1-terraform",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.102.51.171",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "publicip1-terraform",
            "resource_group_name": "rg1-terraform",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "rg1-terraform",
            "virtual_network_name": "vnet1-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "rg1-terraform",
            "virtual_network_name": "vnet1-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg1_vnet1-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet1",
            "network_security_group_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg1-terraform",
            "subnet_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.vnet1-subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg1_vnet1-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet2",
            "network_security_group_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg1-terraform",
            "subnet_id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.vnet1-subnet2",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9ed0c3cd-7fab-4a18-bb40-3d4b969a65f9",
            "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform",
            "location": "eastus",
            "name": "vnet1-terraform",
            "resource_group_name": "rg1-terraform",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg1-terraform"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/virtualNetworks/vnet1-terraform/subnets/subnet2",
                "name": "subnet2",
                "security_group": "/subscriptions/aff5b933-279e-4f20-9eea-60552917a436/resourceGroups/rg1-terraform/providers/Microsoft.Network/networkSecurityGroups/nsg1-terraform"
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}